# dw-cli

./: README.md  dw-0.1.0-py3-none-any.whl  dw.json  main.py  status.json
dw/: README.md  pyproject.toml
dw-0.1.0/: PKG-INFO
dw/dw/: main.py  status.json
