[project]
name = "dw"
version = "0.1.0"
description = "Deep work tracker"
authors = [
    {name = "Calder MF"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "datetime (>=5.5,<6.0)"
]

[project.scripts]
dw = "dw.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
